ANTLR/RusLangParser.py
# Generated from RusLang.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class RusLangParser ( Parser ):

    grammarFileName = "RusLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "'++'", "'<-'", 
                     "'>'", "'<'", "'='", "'>='", "'<='", "'/='", "':'", 
                     "'('", "')'", "'['", "']'", "','" ]

    symbolicNames = [ "<INVALID>", "T_END_LINE", "T_NUMBER", "T_STRING", 
                      "T_BOOL", "T_VOID", "T_IF", "T_ELSE", "T_ELIF", "T_FOR", 
                      "T_FROM", "T_TO", "T_WHILE", "T_NOT", "T_AND", "T_OR", 
                      "T_FUNCTION", "T_RETURN", "T_PRINT", "T_TRUE", "T_FALSE", 
                      "T_END", "T_BREAK", "T_CONTINUE", "T_PLUS", "T_MINUS", 
                      "T_MUL", "T_DIV", "T_POW", "T_CONCAT", "T_ASSIGN", 
                      "T_G", "T_L", "T_EQ", "T_GEQ", "T_LEQ", "T_NEQ", "T_DOTS", 
                      "T_LBRACKET", "T_RBRACKET", "T_LSQUARE", "T_RSQUARE", 
                      "T_COMMA", "T_COMMENT", "T_NUMBER_VAL", "T_STRING_VAL", 
                      "T_VAR_ID", "T_WHITESPACE" ]

    RULE_var_type = 0
    RULE_listValue = 1
    RULE_listExpression = 2
    RULE_value = 3
    RULE_varDeclaration = 4
    RULE_varAssignment = 5
    RULE_arithmeticExpression = 6
    RULE_stringExpression = 7
    RULE_booleanExpression = 8
    RULE_printExpression = 9
    RULE_expression = 10
    RULE_code = 11
    RULE_program = 12
    RULE_forLoopExpression = 13
    RULE_whileLoopExpression = 14
    RULE_loopCode = 15
    RULE_conditionalExpression = 16
    RULE_elifExpression = 17
    RULE_elseExpression = 18
    RULE_functionDeclaration = 19
    RULE_argList = 20
    RULE_fullArgList = 21
    RULE_functionCall = 22
    RULE_valueList = 23
    RULE_fullValueList = 24

    ruleNames =  [ "var_type", "listValue", "listExpression", "value", "varDeclaration", 
                   "varAssignment", "arithmeticExpression", "stringExpression", 
                   "booleanExpression", "printExpression", "expression", 
                   "code", "program", "forLoopExpression", "whileLoopExpression", 
                   "loopCode", "conditionalExpression", "elifExpression", 
                   "elseExpression", "functionDeclaration", "argList", "fullArgList", 
                   "functionCall", "valueList", "fullValueList" ]

    EOF = Token.EOF
    T_END_LINE=1
    T_NUMBER=2
    T_STRING=3
    T_BOOL=4
    T_VOID=5
    T_IF=6
    T_ELSE=7
    T_ELIF=8
    T_FOR=9
    T_FROM=10
    T_TO=11
    T_WHILE=12
    T_NOT=13
    T_AND=14
    T_OR=15
    T_FUNCTION=16
    T_RETURN=17
    T_PRINT=18
    T_TRUE=19
    T_FALSE=20
    T_END=21
    T_BREAK=22
    T_CONTINUE=23
    T_PLUS=24
    T_MINUS=25
    T_MUL=26
    T_DIV=27
    T_POW=28
    T_CONCAT=29
    T_ASSIGN=30
    T_G=31
    T_L=32
    T_EQ=33
    T_GEQ=34
    T_LEQ=35
    T_NEQ=36
    T_DOTS=37
    T_LBRACKET=38
    T_RBRACKET=39
    T_LSQUARE=40
    T_RSQUARE=41
    T_COMMA=42
    T_COMMENT=43
    T_NUMBER_VAL=44
    T_STRING_VAL=45
    T_VAR_ID=46
    T_WHITESPACE=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Var_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_NUMBER(self):
            return self.getToken(RusLangParser.T_NUMBER, 0)

        def T_STRING(self):
            return self.getToken(RusLangParser.T_STRING, 0)

        def T_BOOL(self):
            return self.getToken(RusLangParser.T_BOOL, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = RusLangParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RusLangParser.T_NUMBER) | (1 << RusLangParser.T_STRING) | (1 << RusLangParser.T_BOOL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_LSQUARE(self):
            return self.getToken(RusLangParser.T_LSQUARE, 0)

        def valueList(self):
            return self.getTypedRuleContext(RusLangParser.ValueListContext,0)


        def T_RSQUARE(self):
            return self.getToken(RusLangParser.T_RSQUARE, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_listValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListValue" ):
                listener.enterListValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListValue" ):
                listener.exitListValue(self)




    def listValue(self):

        localctx = RusLangParser.ListValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_listValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(RusLangParser.T_LSQUARE)
            self.state = 53
            self.valueList(0)
            self.state = 54
            self.match(RusLangParser.T_RSQUARE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listValue(self):
            return self.getTypedRuleContext(RusLangParser.ListValueContext,0)


        def listExpression(self):
            return self.getTypedRuleContext(RusLangParser.ListExpressionContext,0)


        def T_CONCAT(self):
            return self.getToken(RusLangParser.T_CONCAT, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_listExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListExpression" ):
                listener.enterListExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListExpression" ):
                listener.exitListExpression(self)



    def listExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RusLangParser.ListExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_listExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.listValue()
            self._ctx.stop = self._input.LT(-1)
            self.state = 64
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = RusLangParser.ListExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_listExpression)
                    self.state = 59
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 60
                    self.match(RusLangParser.T_CONCAT)
                    self.state = 61
                    self.listValue() 
                self.state = 66
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringExpression(self):
            return self.getTypedRuleContext(RusLangParser.StringExpressionContext,0)


        def booleanExpression(self):
            return self.getTypedRuleContext(RusLangParser.BooleanExpressionContext,0)


        def arithmeticExpression(self):
            return self.getTypedRuleContext(RusLangParser.ArithmeticExpressionContext,0)


        def listExpression(self):
            return self.getTypedRuleContext(RusLangParser.ListExpressionContext,0)


        def T_VAR_ID(self):
            return self.getToken(RusLangParser.T_VAR_ID, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = RusLangParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.stringExpression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.booleanExpression(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.arithmeticExpression(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.listExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.match(RusLangParser.T_VAR_ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(RusLangParser.Var_typeContext,0)


        def T_VAR_ID(self):
            return self.getToken(RusLangParser.T_VAR_ID, 0)

        def T_ASSIGN(self):
            return self.getToken(RusLangParser.T_ASSIGN, 0)

        def value(self):
            return self.getTypedRuleContext(RusLangParser.ValueContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)




    def varDeclaration(self):

        localctx = RusLangParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.var_type()
            self.state = 75
            self.match(RusLangParser.T_VAR_ID)
            self.state = 76
            self.match(RusLangParser.T_ASSIGN)
            self.state = 77
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarAssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_VAR_ID(self):
            return self.getToken(RusLangParser.T_VAR_ID, 0)

        def T_ASSIGN(self):
            return self.getToken(RusLangParser.T_ASSIGN, 0)

        def value(self):
            return self.getTypedRuleContext(RusLangParser.ValueContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_varAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarAssignment" ):
                listener.enterVarAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarAssignment" ):
                listener.exitVarAssignment(self)




    def varAssignment(self):

        localctx = RusLangParser.VarAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(RusLangParser.T_VAR_ID)
            self.state = 80
            self.match(RusLangParser.T_ASSIGN)
            self.state = 81
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArithmeticExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_LBRACKET(self):
            return self.getToken(RusLangParser.T_LBRACKET, 0)

        def arithmeticExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(RusLangParser.ArithmeticExpressionContext,i)


        def T_RBRACKET(self):
            return self.getToken(RusLangParser.T_RBRACKET, 0)

        def T_NUMBER_VAL(self):
            return self.getToken(RusLangParser.T_NUMBER_VAL, 0)

        def T_VAR_ID(self):
            return self.getToken(RusLangParser.T_VAR_ID, 0)

        def T_MUL(self):
            return self.getToken(RusLangParser.T_MUL, 0)

        def T_DIV(self):
            return self.getToken(RusLangParser.T_DIV, 0)

        def T_MINUS(self):
            return self.getToken(RusLangParser.T_MINUS, 0)

        def T_PLUS(self):
            return self.getToken(RusLangParser.T_PLUS, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_arithmeticExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpression" ):
                listener.enterArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpression" ):
                listener.exitArithmeticExpression(self)



    def arithmeticExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RusLangParser.ArithmeticExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_arithmeticExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RusLangParser.T_LBRACKET]:
                self.state = 84
                self.match(RusLangParser.T_LBRACKET)
                self.state = 85
                self.arithmeticExpression(0)
                self.state = 86
                self.match(RusLangParser.T_RBRACKET)
                pass
            elif token in [RusLangParser.T_NUMBER_VAL]:
                self.state = 88
                self.match(RusLangParser.T_NUMBER_VAL)
                pass
            elif token in [RusLangParser.T_VAR_ID]:
                self.state = 89
                self.match(RusLangParser.T_VAR_ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = RusLangParser.ArithmeticExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 92
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 93
                        _la = self._input.LA(1)
                        if not(_la==RusLangParser.T_MUL or _la==RusLangParser.T_DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 94
                        self.arithmeticExpression(5)
                        pass

                    elif la_ == 2:
                        localctx = RusLangParser.ArithmeticExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 95
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 96
                        _la = self._input.LA(1)
                        if not(_la==RusLangParser.T_PLUS or _la==RusLangParser.T_MINUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 97
                        self.arithmeticExpression(4)
                        pass

             
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class StringExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_STRING_VAL(self):
            return self.getToken(RusLangParser.T_STRING_VAL, 0)

        def T_VAR_ID(self):
            return self.getToken(RusLangParser.T_VAR_ID, 0)

        def T_LBRACKET(self):
            return self.getToken(RusLangParser.T_LBRACKET, 0)

        def stringExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.StringExpressionContext)
            else:
                return self.getTypedRuleContext(RusLangParser.StringExpressionContext,i)


        def T_RBRACKET(self):
            return self.getToken(RusLangParser.T_RBRACKET, 0)

        def T_CONCAT(self):
            return self.getToken(RusLangParser.T_CONCAT, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_stringExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpression" ):
                listener.enterStringExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpression" ):
                listener.exitStringExpression(self)



    def stringExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RusLangParser.StringExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_stringExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RusLangParser.T_STRING_VAL]:
                self.state = 104
                self.match(RusLangParser.T_STRING_VAL)
                pass
            elif token in [RusLangParser.T_VAR_ID]:
                self.state = 105
                self.match(RusLangParser.T_VAR_ID)
                pass
            elif token in [RusLangParser.T_LBRACKET]:
                self.state = 106
                self.match(RusLangParser.T_LBRACKET)
                self.state = 107
                self.stringExpression(0)
                self.state = 108
                self.match(RusLangParser.T_RBRACKET)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 117
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = RusLangParser.StringExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_stringExpression)
                    self.state = 112
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 113
                    self.match(RusLangParser.T_CONCAT)
                    self.state = 114
                    self.stringExpression(5) 
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class BooleanExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.StringExpressionContext)
            else:
                return self.getTypedRuleContext(RusLangParser.StringExpressionContext,i)


        def T_EQ(self):
            return self.getToken(RusLangParser.T_EQ, 0)

        def T_NEQ(self):
            return self.getToken(RusLangParser.T_NEQ, 0)

        def arithmeticExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(RusLangParser.ArithmeticExpressionContext,i)


        def T_G(self):
            return self.getToken(RusLangParser.T_G, 0)

        def T_L(self):
            return self.getToken(RusLangParser.T_L, 0)

        def T_LEQ(self):
            return self.getToken(RusLangParser.T_LEQ, 0)

        def T_GEQ(self):
            return self.getToken(RusLangParser.T_GEQ, 0)

        def T_FALSE(self):
            return self.getToken(RusLangParser.T_FALSE, 0)

        def T_TRUE(self):
            return self.getToken(RusLangParser.T_TRUE, 0)

        def T_VAR_ID(self):
            return self.getToken(RusLangParser.T_VAR_ID, 0)

        def T_NOT(self):
            return self.getToken(RusLangParser.T_NOT, 0)

        def booleanExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.BooleanExpressionContext)
            else:
                return self.getTypedRuleContext(RusLangParser.BooleanExpressionContext,i)


        def T_LBRACKET(self):
            return self.getToken(RusLangParser.T_LBRACKET, 0)

        def T_RBRACKET(self):
            return self.getToken(RusLangParser.T_RBRACKET, 0)

        def T_AND(self):
            return self.getToken(RusLangParser.T_AND, 0)

        def T_OR(self):
            return self.getToken(RusLangParser.T_OR, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_booleanExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpression" ):
                listener.enterBooleanExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpression" ):
                listener.exitBooleanExpression(self)



    def booleanExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RusLangParser.BooleanExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_booleanExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 121
                self.stringExpression(0)
                self.state = 122
                _la = self._input.LA(1)
                if not(_la==RusLangParser.T_EQ or _la==RusLangParser.T_NEQ):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 123
                self.stringExpression(0)
                pass

            elif la_ == 2:
                self.state = 125
                self.arithmeticExpression(0)
                self.state = 126
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RusLangParser.T_G) | (1 << RusLangParser.T_L) | (1 << RusLangParser.T_EQ) | (1 << RusLangParser.T_GEQ) | (1 << RusLangParser.T_LEQ) | (1 << RusLangParser.T_NEQ))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 127
                self.arithmeticExpression(0)
                pass

            elif la_ == 3:
                self.state = 129
                self.match(RusLangParser.T_FALSE)
                pass

            elif la_ == 4:
                self.state = 130
                self.match(RusLangParser.T_TRUE)
                pass

            elif la_ == 5:
                self.state = 131
                self.match(RusLangParser.T_VAR_ID)
                pass

            elif la_ == 6:
                self.state = 132
                self.match(RusLangParser.T_NOT)
                self.state = 133
                self.booleanExpression(2)
                pass

            elif la_ == 7:
                self.state = 134
                self.match(RusLangParser.T_LBRACKET)
                self.state = 135
                self.booleanExpression(0)
                self.state = 136
                self.match(RusLangParser.T_RBRACKET)
                pass

